; ModuleID = '/home/carl/AnghaBench/sumatrapdf/ext/mujs/extr_jsstring.c_jsB_initstring.c'
source_filename = "/home/carl/AnghaBench/sumatrapdf/ext/mujs/extr_jsstring.c_jsB_initstring.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_12__ = type { %struct.TYPE_13__* }
%struct.TYPE_13__ = type { %struct.TYPE_11__ }
%struct.TYPE_11__ = type { %struct.TYPE_10__ }
%struct.TYPE_10__ = type { i8*, i64 }

@.str = private unnamed_addr constant [1 x i8] zeroinitializer, align 1
@.str.1 = private unnamed_addr constant [26 x i8] c"String.prototype.toString\00", align 1
@Sp_toString = common dso_local global i32 0, align 4
@.str.2 = private unnamed_addr constant [25 x i8] c"String.prototype.valueOf\00", align 1
@Sp_valueOf = common dso_local global i32 0, align 4
@.str.3 = private unnamed_addr constant [24 x i8] c"String.prototype.charAt\00", align 1
@Sp_charAt = common dso_local global i32 0, align 4
@.str.4 = private unnamed_addr constant [28 x i8] c"String.prototype.charCodeAt\00", align 1
@Sp_charCodeAt = common dso_local global i32 0, align 4
@.str.5 = private unnamed_addr constant [24 x i8] c"String.prototype.concat\00", align 1
@Sp_concat = common dso_local global i32 0, align 4
@.str.6 = private unnamed_addr constant [25 x i8] c"String.prototype.indexOf\00", align 1
@Sp_indexOf = common dso_local global i32 0, align 4
@.str.7 = private unnamed_addr constant [29 x i8] c"String.prototype.lastIndexOf\00", align 1
@Sp_lastIndexOf = common dso_local global i32 0, align 4
@.str.8 = private unnamed_addr constant [31 x i8] c"String.prototype.localeCompare\00", align 1
@Sp_localeCompare = common dso_local global i32 0, align 4
@.str.9 = private unnamed_addr constant [23 x i8] c"String.prototype.match\00", align 1
@Sp_match = common dso_local global i32 0, align 4
@.str.10 = private unnamed_addr constant [25 x i8] c"String.prototype.replace\00", align 1
@Sp_replace = common dso_local global i32 0, align 4
@.str.11 = private unnamed_addr constant [24 x i8] c"String.prototype.search\00", align 1
@Sp_search = common dso_local global i32 0, align 4
@.str.12 = private unnamed_addr constant [23 x i8] c"String.prototype.slice\00", align 1
@Sp_slice = common dso_local global i32 0, align 4
@.str.13 = private unnamed_addr constant [23 x i8] c"String.prototype.split\00", align 1
@Sp_split = common dso_local global i32 0, align 4
@.str.14 = private unnamed_addr constant [27 x i8] c"String.prototype.substring\00", align 1
@Sp_substring = common dso_local global i32 0, align 4
@.str.15 = private unnamed_addr constant [29 x i8] c"String.prototype.toLowerCase\00", align 1
@Sp_toLowerCase = common dso_local global i32 0, align 4
@.str.16 = private unnamed_addr constant [35 x i8] c"String.prototype.toLocaleLowerCase\00", align 1
@.str.17 = private unnamed_addr constant [29 x i8] c"String.prototype.toUpperCase\00", align 1
@Sp_toUpperCase = common dso_local global i32 0, align 4
@.str.18 = private unnamed_addr constant [35 x i8] c"String.prototype.toLocaleUpperCase\00", align 1
@.str.19 = private unnamed_addr constant [22 x i8] c"String.prototype.trim\00", align 1
@Sp_trim = common dso_local global i32 0, align 4
@jsB_String = common dso_local global i32 0, align 4
@jsB_new_String = common dso_local global i32 0, align 4
@.str.20 = private unnamed_addr constant [7 x i8] c"String\00", align 1
@.str.21 = private unnamed_addr constant [20 x i8] c"String.fromCharCode\00", align 1
@S_fromCharCode = common dso_local global i32 0, align 4
@JS_DONTENUM = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @jsB_initstring(%struct.TYPE_12__* %0) #0 {
  %2 = alloca %struct.TYPE_12__*, align 8
  store %struct.TYPE_12__* %0, %struct.TYPE_12__** %2, align 8
  %3 = load %struct.TYPE_12__*, %struct.TYPE_12__** %2, align 8
  %4 = getelementptr inbounds %struct.TYPE_12__, %struct.TYPE_12__* %3, i32 0, i32 0
  %5 = load %struct.TYPE_13__*, %struct.TYPE_13__** %4, align 8
  %6 = getelementptr inbounds %struct.TYPE_13__, %struct.TYPE_13__* %5, i32 0, i32 0
  %7 = getelementptr inbounds %struct.TYPE_11__, %struct.TYPE_11__* %6, i32 0, i32 0
  %8 = getelementptr inbounds %struct.TYPE_10__, %struct.TYPE_10__* %7, i32 0, i32 0
  store i8* getelementptr inbounds ([1 x i8], [1 x i8]* @.str, i64 0, i64 0), i8** %8, align 8
  %9 = load %struct.TYPE_12__*, %struct.TYPE_12__** %2, align 8
  %10 = getelementptr inbounds %struct.TYPE_12__, %struct.TYPE_12__* %9, i32 0, i32 0
  %11 = load %struct.TYPE_13__*, %struct.TYPE_13__** %10, align 8
  %12 = getelementptr inbounds %struct.TYPE_13__, %struct.TYPE_13__* %11, i32 0, i32 0
  %13 = getelementptr inbounds %struct.TYPE_11__, %struct.TYPE_11__* %12, i32 0, i32 0
  %14 = getelementptr inbounds %struct.TYPE_10__, %struct.TYPE_10__* %13, i32 0, i32 1
  store i64 0, i64* %14, align 8
  %15 = load %struct.TYPE_12__*, %struct.TYPE_12__** %2, align 8
  %16 = load %struct.TYPE_12__*, %struct.TYPE_12__** %2, align 8
  %17 = getelementptr inbounds %struct.TYPE_12__, %struct.TYPE_12__* %16, i32 0, i32 0
  %18 = load %struct.TYPE_13__*, %struct.TYPE_13__** %17, align 8
  %19 = call i32 @js_pushobject(%struct.TYPE_12__* %15, %struct.TYPE_13__* %18)
  %20 = load %struct.TYPE_12__*, %struct.TYPE_12__** %2, align 8
  %21 = load i32, i32* @Sp_toString, align 4
  %22 = call i32 @jsB_propf(%struct.TYPE_12__* %20, i8* getelementptr inbounds ([26 x i8], [26 x i8]* @.str.1, i64 0, i64 0), i32 %21, i32 0)
  %23 = load %struct.TYPE_12__*, %struct.TYPE_12__** %2, align 8
  %24 = load i32, i32* @Sp_valueOf, align 4
  %25 = call i32 @jsB_propf(%struct.TYPE_12__* %23, i8* getelementptr inbounds ([25 x i8], [25 x i8]* @.str.2, i64 0, i64 0), i32 %24, i32 0)
  %26 = load %struct.TYPE_12__*, %struct.TYPE_12__** %2, align 8
  %27 = load i32, i32* @Sp_charAt, align 4
  %28 = call i32 @jsB_propf(%struct.TYPE_12__* %26, i8* getelementptr inbounds ([24 x i8], [24 x i8]* @.str.3, i64 0, i64 0), i32 %27, i32 1)
  %29 = load %struct.TYPE_12__*, %struct.TYPE_12__** %2, align 8
  %30 = load i32, i32* @Sp_charCodeAt, align 4
  %31 = call i32 @jsB_propf(%struct.TYPE_12__* %29, i8* getelementptr inbounds ([28 x i8], [28 x i8]* @.str.4, i64 0, i64 0), i32 %30, i32 1)
  %32 = load %struct.TYPE_12__*, %struct.TYPE_12__** %2, align 8
  %33 = load i32, i32* @Sp_concat, align 4
  %34 = call i32 @jsB_propf(%struct.TYPE_12__* %32, i8* getelementptr inbounds ([24 x i8], [24 x i8]* @.str.5, i64 0, i64 0), i32 %33, i32 0)
  %35 = load %struct.TYPE_12__*, %struct.TYPE_12__** %2, align 8
  %36 = load i32, i32* @Sp_indexOf, align 4
  %37 = call i32 @jsB_propf(%struct.TYPE_12__* %35, i8* getelementptr inbounds ([25 x i8], [25 x i8]* @.str.6, i64 0, i64 0), i32 %36, i32 1)
  %38 = load %struct.TYPE_12__*, %struct.TYPE_12__** %2, align 8
  %39 = load i32, i32* @Sp_lastIndexOf, align 4
  %40 = call i32 @jsB_propf(%struct.TYPE_12__* %38, i8* getelementptr inbounds ([29 x i8], [29 x i8]* @.str.7, i64 0, i64 0), i32 %39, i32 1)
  %41 = load %struct.TYPE_12__*, %struct.TYPE_12__** %2, align 8
  %42 = load i32, i32* @Sp_localeCompare, align 4
  %43 = call i32 @jsB_propf(%struct.TYPE_12__* %41, i8* getelementptr inbounds ([31 x i8], [31 x i8]* @.str.8, i64 0, i64 0), i32 %42, i32 1)
  %44 = load %struct.TYPE_12__*, %struct.TYPE_12__** %2, align 8
  %45 = load i32, i32* @Sp_match, align 4
  %46 = call i32 @jsB_propf(%struct.TYPE_12__* %44, i8* getelementptr inbounds ([23 x i8], [23 x i8]* @.str.9, i64 0, i64 0), i32 %45, i32 1)
  %47 = load %struct.TYPE_12__*, %struct.TYPE_12__** %2, align 8
  %48 = load i32, i32* @Sp_replace, align 4
  %49 = call i32 @jsB_propf(%struct.TYPE_12__* %47, i8* getelementptr inbounds ([25 x i8], [25 x i8]* @.str.10, i64 0, i64 0), i32 %48, i32 2)
  %50 = load %struct.TYPE_12__*, %struct.TYPE_12__** %2, align 8
  %51 = load i32, i32* @Sp_search, align 4
  %52 = call i32 @jsB_propf(%struct.TYPE_12__* %50, i8* getelementptr inbounds ([24 x i8], [24 x i8]* @.str.11, i64 0, i64 0), i32 %51, i32 1)
  %53 = load %struct.TYPE_12__*, %struct.TYPE_12__** %2, align 8
  %54 = load i32, i32* @Sp_slice, align 4
  %55 = call i32 @jsB_propf(%struct.TYPE_12__* %53, i8* getelementptr inbounds ([23 x i8], [23 x i8]* @.str.12, i64 0, i64 0), i32 %54, i32 2)
  %56 = load %struct.TYPE_12__*, %struct.TYPE_12__** %2, align 8
  %57 = load i32, i32* @Sp_split, align 4
  %58 = call i32 @jsB_propf(%struct.TYPE_12__* %56, i8* getelementptr inbounds ([23 x i8], [23 x i8]* @.str.13, i64 0, i64 0), i32 %57, i32 2)
  %59 = load %struct.TYPE_12__*, %struct.TYPE_12__** %2, align 8
  %60 = load i32, i32* @Sp_substring, align 4
  %61 = call i32 @jsB_propf(%struct.TYPE_12__* %59, i8* getelementptr inbounds ([27 x i8], [27 x i8]* @.str.14, i64 0, i64 0), i32 %60, i32 2)
  %62 = load %struct.TYPE_12__*, %struct.TYPE_12__** %2, align 8
  %63 = load i32, i32* @Sp_toLowerCase, align 4
  %64 = call i32 @jsB_propf(%struct.TYPE_12__* %62, i8* getelementptr inbounds ([29 x i8], [29 x i8]* @.str.15, i64 0, i64 0), i32 %63, i32 0)
  %65 = load %struct.TYPE_12__*, %struct.TYPE_12__** %2, align 8
  %66 = load i32, i32* @Sp_toLowerCase, align 4
  %67 = call i32 @jsB_propf(%struct.TYPE_12__* %65, i8* getelementptr inbounds ([35 x i8], [35 x i8]* @.str.16, i64 0, i64 0), i32 %66, i32 0)
  %68 = load %struct.TYPE_12__*, %struct.TYPE_12__** %2, align 8
  %69 = load i32, i32* @Sp_toUpperCase, align 4
  %70 = call i32 @jsB_propf(%struct.TYPE_12__* %68, i8* getelementptr inbounds ([29 x i8], [29 x i8]* @.str.17, i64 0, i64 0), i32 %69, i32 0)
  %71 = load %struct.TYPE_12__*, %struct.TYPE_12__** %2, align 8
  %72 = load i32, i32* @Sp_toUpperCase, align 4
  %73 = call i32 @jsB_propf(%struct.TYPE_12__* %71, i8* getelementptr inbounds ([35 x i8], [35 x i8]* @.str.18, i64 0, i64 0), i32 %72, i32 0)
  %74 = load %struct.TYPE_12__*, %struct.TYPE_12__** %2, align 8
  %75 = load i32, i32* @Sp_trim, align 4
  %76 = call i32 @jsB_propf(%struct.TYPE_12__* %74, i8* getelementptr inbounds ([22 x i8], [22 x i8]* @.str.19, i64 0, i64 0), i32 %75, i32 0)
  %77 = load %struct.TYPE_12__*, %struct.TYPE_12__** %2, align 8
  %78 = load i32, i32* @jsB_String, align 4
  %79 = load i32, i32* @jsB_new_String, align 4
  %80 = call i32 @js_newcconstructor(%struct.TYPE_12__* %77, i32 %78, i32 %79, i8* getelementptr inbounds ([7 x i8], [7 x i8]* @.str.20, i64 0, i64 0), i32 0)
  %81 = load %struct.TYPE_12__*, %struct.TYPE_12__** %2, align 8
  %82 = load i32, i32* @S_fromCharCode, align 4
  %83 = call i32 @jsB_propf(%struct.TYPE_12__* %81, i8* getelementptr inbounds ([20 x i8], [20 x i8]* @.str.21, i64 0, i64 0), i32 %82, i32 0)
  %84 = load %struct.TYPE_12__*, %struct.TYPE_12__** %2, align 8
  %85 = load i32, i32* @JS_DONTENUM, align 4
  %86 = call i32 @js_defglobal(%struct.TYPE_12__* %84, i8* getelementptr inbounds ([7 x i8], [7 x i8]* @.str.20, i64 0, i64 0), i32 %85)
  ret void
}

declare dso_local i32 @js_pushobject(%struct.TYPE_12__*, %struct.TYPE_13__*) #1

declare dso_local i32 @jsB_propf(%struct.TYPE_12__*, i8*, i32, i32) #1

declare dso_local i32 @js_newcconstructor(%struct.TYPE_12__*, i32, i32, i8*, i32) #1

declare dso_local i32 @js_defglobal(%struct.TYPE_12__*, i8*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
